[gd_scene load_steps=6 format=3 uid="uid://c4k03hq0ryxlr"]

[ext_resource type="Texture2D" uid="uid://b1ivfimnfvo15" path="res://assets/art/menu/116313.png" id="1_irhji"]
[ext_resource type="Script" path="res://scripts/menu/start_menu.gd" id="2_script"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
direction = Vector3(0, -1, 0)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
gravity = Vector3(0, 30, 0)
scale_min = 0.1
scale_max = 0.3

[sub_resource type="Theme" id="Theme_1"]
default_font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="116313" type="Sprite2D" parent="Background"]
position = Vector2(575.938, 631.5)
scale = Vector2(0.563963, 0.632242)
texture = ExtResource("1_irhji")

[node name="ParticleSystem" type="GPUParticles2D" parent="."]
position = Vector2(576, 0)
amount = 50
lifetime = 8.0
preprocess = 2.0
process_material = SubResource("ParticleProcessMaterial_1")

[node name="TeaCup" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -190.0
offset_right = 146.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ConfirmButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "CONFIRMAR"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.299
anchor_right = 0.5
anchor_bottom = 0.299
offset_left = -150.0
offset_top = 180.248
offset_right = 150.0
offset_bottom = 380.248
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1")

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "EMPEZAR"
flat = true

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "OPCIONES"
flat = true

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "SALIR"
flat = true
